--- a/mymaster/sections/albantakis.tex
+++ b/mymaster/sections/albantakis.tex
@@ -20,14 +20,14 @@ The environment is a "falling blocks game", with a varying shape and size of the
 Most importantly, the work of Albantakis et al. applies the IIT and makes three predictions:
 \begin{itemize}
 \item{}
-The number of concepts, and their $\phi^max$ (see sect. \vref{iit}), should incrase during adaption, proportional to the amount of internal computation necessary to solve a task.
+The number of concepts, and their $\phi^max$ (see sect. \vref{sect:iit}), should incrase during adaption, proportional to the amount of internal computation necessary to solve a task.
 \item{}
 Given a limited number of hidden elements, integration should also increase during adaption, particularly in tasks that require more memory.
 \item{}
 When the animat has a limited sensory and motor capacity, it needs to rely more on memory when the complexity of the environment increases. Therefore the integration of the animat should also increase during evolution, when under sensory or motor limiations.\cite{albantakis_evolution_2014}
 \end{itemize}
 
-The study does find that during evolution, complex environments tend to lead to an increased number of concepts (functions) in the causal structure, and also more integrated conceptual structures (see sect. \vref{iit}).
+The study does find that during evolution, complex environments tend to lead to an increased number of concepts (functions) in the causal structure, and also more integrated conceptual structures (see sect. \vref{sect:iit}).
 Animats with more integrated structures also seem to be more robust, which make sense because when there is a limited amount of elements in the brain, more integrated structures can contain more functions.
 The study also found that animats with a higher fitness usually had a higher degeneracy, that is, a function could be performed by several structures in the brain.
 This leads to flexibility and robustness, and could also lead to development of higher-order functions.\cite{albantakis_evolution_2014}
