--- a/mymaster/sections/iit.tex
+++ b/mymaster/sections/iit.tex
@@ -11,7 +11,7 @@ The CES is mapped to the properties of experience, and the CES can be quantified
 Although IIT might seem overly abstract, the first tangible result was published as a study on the question "Why does space feel the way it does?".
 Here a model of the Visual Cortex 1 and 2 (V1 and V2) was cut into a CES, using the knowledge of the grid cells that have been proven to be important for localization \cite{haun_why_2019}.
 
-The following is an attempt to summarize some corollaries of the theory, based on the article by Oizumi et. al \cite{oizumi_phenomenology_2014}.
+\paragraph{A summary of corollaries} of IIT, based on the article by Oizumi et. al \cite{oizumi_phenomenology_2014}:
 A conscious system will usually consist of a main \textbf{complex}, and smaller supporting complexes.
 This main complex will be the most conscious part of the system, like the part of our brain that we could not function without, while the supporting complexes could be compared to smaller parts of the brain, like for example the visual cortex.
 Conscious systems will not have modular, that is, produce less functionality than their components, and they have to produce functionality that is more than a higher order of the combined components.
@@ -25,6 +25,6 @@ Networks that are not necessarily feed-forward only, but simulated on a physical
 This leads to a final corollary, that says that a conscious system is able to develop concepts based on other concepts within itself, without the need of external stimuli.
 These internal concepts would more often be connected to a large number of other concepts, and not contribute to specific details.
 
-In this project, I hope to utilize IIT as a way to analyze the perception of automated agents, evolved as SNN \vref{sect:snn} animats \vref{sect:agent} on BrainScaleS \vref{sect:bss}.
+\paragraph{In this project} I hope to utilize IIT as a way to analyze the perception of automated agents, evolved as SNN \vref{sect:snn} animats \vref{sect:agent} on BrainScaleS \vref{sect:bss}.
 As the complexity and states of the animats is known, the animats can be analyzed.
 Analyzing the animats in regards to IIT will only be attempted if time permits.
