--- a/mymaster/sections/neuromorphic2.tex
+++ b/mymaster/sections/neuromorphic2.tex
@@ -1,11 +1,20 @@
-Today, most developers consider the von Neumann architecture as the most efficient and scalable architecture for doing arithmetic computation.
+\paragraph{Today} most developers consider the von Neumann architecture as the most efficient and scalable architecture for doing arithmetic computation.
 However, as our expectations of the functionality of the computer grow increasingly similar to the functionality of biological systems, we will require devices that are not arithmetic machines but rather "thinking machines."
 It is essential to consider how computer architecture usually has been modeled after then brain since the very beginning, but always at a simplified notion compared to the current knowledge of biology and psychology.
-George Boole's maybe most excellent work was his philosophical and mathematical An Investigation of the Laws of Thought, where the notion that human reasoning could be summed up by symbolic logic \cite{boole_investigation_1854}.
-This work later inspired Claude Shannon to build the first "switching circuits" that facilitated the design for combinatorial logic circuits, which found the basis of our modern computers.
-John von Neumann draws parallels to the human neurons in his report on the EDVAC, which was used by Alan Turing as a source for understanding the design of a digital computer \cite{von_neumann_first_1993}.
-For further development of the modern computer and its algorithms, Boolean logic as been quintessential. The most successful artificial intelligence programs were, for a long time, only compositions of if-then sentences \cite{haenlein_brief_2019}.
-Through this brief investigation into the history of computation, it is safe to assume that modern arithmetic computer architecture bases itself on outdated knowledge of the best "thinking machine" that we know of; the human brain.
+
+\paragraph{Consider the history} of our computer architetcure:
+The philosopher George Boole's maybe most excellent work was his mathematical An Investigation of the Laws of Thought, where the notion that human reasoning could be summed up by symbolic logic \cite{boole_investigation_1854}.
+This work later inspired Claude Shannon to build the first "switching circuits" that facilitated the design for combinatorial logic circuits, and led to the vacuum tube technology used in early computers.
+John von Neumann draws parallels to the human neurons in his report on the EDVAC, which was used by Alan Turing as a theoretical source of understanding while designing the Automatic Computing Engine \cite{von_neumann_first_1993}.
+The theoretical attempt to "capture human intelligence" and mechanical analogies to neurons led to our computer architecture.
+Combinatorial logic eventually led to the development of modern Information Theory, which was proposed by the same Shannon in his A Mathematical Theory of Communication.
+Thus, the foundational basics of our computer programs are also rooted in the search for intelligent systems.
+The most successful artificial intelligence programs were, for a long time, only compositions of logical if-then sentences \cite{haenlein_brief_2019}.
+Today most artificial intelligence programs are based on arithmetic approximation of complex functions through the use of millions of logic gates in the form of transistors.
+Over the past 70 years, our understanding of the nervous system, and of human psychology, has developed drastically, but modern computing is still rooted in the same "outdated" knowledge of the human brain.
+
+\paragraph{The efficiency} of our brains outperforms modern supercomputers in several aspects; like pattern recognition, grasping the "essence" of books and creative thinking.
+In other aspects, like arithmetics and approximation, the supercomputer is far more efficient.
 Even though the human brain can perform arithmetics, it is an activity that consumes a lot more power than a modern cellphone does for the same amount of arithmetic work. However, the human brain performs other marvels, like image recognition, without spending much energy at all, to the very contrary of modern cellphones \cite{meier_special_2017}. The brain has a small, underdeveloped center for arithmetics, while the core of the computer only performs arithmetics \cite{dehaene_arithmetic_2004}.
 To successfully create machines that can efficiently perform functions similar to perception or even sensing, we ought, therefore, to explore solutions based on modern biology and psychology.
 Even many of the founders of computing, like Ada Lovelace, Neumann, and Turing, admitted that the digital computer could not achieve the same functionality as the human brain.
@@ -15,14 +24,14 @@ The very same man that coined the term "Moore's Law" after his friend George Moo
 This man was Carver Mead, who proposed Neuromorphic Electronic Systems, as devices implemented and organized after the same principles as the nervous system.
 The idea is that the nervous system performs "computational" marvels with excellent efficiency and that this is mainly due to how the nervous system utilizes the physical characteristics of its units \cite{mead_neuromorphic_1990}.
 
-There are several challenges related to building such a neuromorphic system.
+\paragraph{The challenges} related to building a neuromorphic system is many;
 An accurate brain model is needed to design better devices.
 To be able to build the devices, developers first need to research proper techniques and materials.
 Any utilization of the systems requires a programming framework.
 Lastly, the developers need to prove that the system has applicability to real-world problems.
 \cite{schuman_survey_2017}.
 
-\section{Models, Algorithms, Devices, and Frameworks}
+\subsection{Models, Algorithms, Devices, and Frameworks}
 There are several popular categories of spiking neuron models.
 
 \paragraph{Biologically Plausible and Biologically Inspired models} incorporate some aspects of biological systems, but that has been proved useful in applications.
