--- a/mymaster/sections/conclusion.tex
+++ b/mymaster/sections/conclusion.tex
@@ -7,7 +7,8 @@ This is a fair way to say that the experiment described in \cite{albantakis_evol
 To provide basis for comparison the experiment will be scalable, from an implementation with logic gates, to an implementation with contiuous variables, to an implementation on BrainScaleS.
 The comparisons can provide various answers based on the perspectives chosen.
 
-\subsection{The methodoly} is clear; First both the game and the animat is implemented in Python.
+\subsection{Methods} in this experiments are chosen to provde a comparison of systems; Digital discrete, digital continuous, mixe-signal continuous.
+First both the game and the animat is implemented in Python.
 The evolutionary algorithm is implemented to replicate the one used in \cite{albantakis_evolution_2014}.
 The second step would then be to implement the animat as a SNN in a simulator that has a fitting AdExp model \vref{sect:adexp},
 this simulator would most likely be NEST \cite{fardet_nest_2020} using PyNN \cite{davison_pynn_2009}.
@@ -17,6 +18,7 @@ but most of these should already be modeled in the simulation.
 All results from evolutionary runs in the three implementations should be saved to logfiles, with the specific network configurations and source codes necessary to replicate the results.
 After each of the first, second and third steps, there should be data of results and configurations that can be analyzed and re-run to produce metrics according to the perspectives chosen for the theoretical contribution.
 
+\subsection{Perspectives}
 \paragraph{From the perspective of efficiency in neuromorphic systems}, an animat approach could be interesting in terms of finding circuit designs that better utilize the characteristics of the architecture.
 The BrainScaleS architecture carry several of the elements of the design that Carver Mead proposed, that is analog components and wafer-scale integration.
 In theory, such a system should be efficient solving complex differential equations with only a few transistors, given the correct hardware configuration.
