--- a/mymaster/sections/introduction.tex
+++ b/mymaster/sections/introduction.tex
@@ -8,10 +8,9 @@ In the search for artificial intelligence, researchers are continuously developi
 
 In 1943, the first mathematical neuron model was published by McCulloch and Pitts, which modeled the neuron as a logic-gate.\cite{cowan_discussion_1990}.
 Through improvements to the McCulloch-Pitts neuron, by scientists as Hebb \cite{brown_legacy_2003}, we eventually got the Perceptron.
-Introduced by Rosenblatt \cite{rosenblatt_perceptron_1958} and refined by Minsky \cite{minsky_perceptrons_2017}, the Perceptron is a binary classifier which models synaptic plasticity and thus, enabled the first "self-\textbf{learning}" Artificial Neural Network (ANN).
+Introduced by Rosenblatt \cite{rosenblatt_perceptron_1958} and refined by Minsky et al. \cite{minsky_perceptrons_2017}, the Perceptron is a binary classifier which models synaptic plasticity and thus, enabled the first "self-\textbf{learning}" Artificial Neural Network (ANN).
 ANNs, in its many forms, runs very well on modern computers based on works by Von Neumann and Alan Turing \cite{von_neumann_first_1993}, theoreticians that were highly supportive of "learning" machines. ANNs, especially with the method of Deep Learning, pioneered by LeCun et al. \cite{lecun_gradient-based_1998}, are now the most used tool for developing modern artificial intelligence technologies \cite{haenlein_brief_2019}. The use of deep learning on modern-day computer architecture has been proven very efficient for most computational tasks but also very inefficient for intricate tasks that are easily solved by biological systems.
-When trying to solve these tasks on ordinary computers, the complexity and size of computational models are increasing so fast,
-that the energy usage of computation has become a real environmental concern \cite{computation_energy_environment}.
+The complexity of the functions approximated by computation is growing exponentially, and so are the energy- and material costs of the computing systems, and this is not sustainable.
 
 As our understanding of neurobiology has progressed, more advanced models have been developed, including details of the ion flows and proteins that affect the membrane potential \cite{burkitt_review_2006}.
 These models are often called Leaky Integrate and Fire Neurons, and the neural networks are often called Spiking Neural Networks (SNN). As biology has been the source of inspiration for most successful architectures of artificial intelligence \cite{minsky_perceptrons_2017}, SNNs might be the next step towards an agent of low-cost human-level intelligence.
@@ -20,7 +19,7 @@ Furthermore, a more suitable technology might be required, termed Neuromorphic S
 
 If a system can solve the same intricate tasks as a human, with ease, and also have a general behavior as a human,
 it could likely pass The Turing Test, but would it then have a human level of intelligence?
-Based on the plethora of theories regarding intelligence that exist today, the answer could be both yes and no. (ADD REFERENCE TO INTELLIGENCE DISCUSSIONS)
+Based on the plethora of theories regarding intelligence that exist today, the answer could be both yes and no \cite{haenlein_brief_2019}.
 If a system was to have a human level of intelligence, one could argue that it would need to experience like a human.
 Some scientists might question whether the system was conscious like a human and draw parallels to the experience of the system \cite{tononi_integrated_2016}.
 The Integrated Information Theory (IIT) is one of many theories questioning consciousness and intelligence, and it provides mathematical tools
@@ -37,7 +36,6 @@ Using IIT to evaluate the intelligence of a computer program with autonomous fun
 However, some neuromorphic systems, built to resemble neural architecture, have more integrated architecture.
 A program written for one of these systems might be considered conscious by IIT and might lead to new insights into the requirements for creating a system with a human level of intelligence.
 
-ADDITION?
 The initial motivation behind this project was the exploration of a neuromorphic system that might lead to new applications in robotics, artifical intelligence or brain-computer interface technology.
 When the cost of simulating the nervous system, which includes solving a massive amount of differential equations, can be reduced by several orders of magnitude, then a whole new world of possibilities could open:
 Dynamic models of robots could be included in the control loops of the simplest of robots.
