finished my text, for now

--- a/mymaster/sections/agent.tex
+++ b/mymaster/sections/agent.tex
@@ -1,7 +1,7 @@
 The humanmade, intelligent autonomous agent would be different from a program in terms of it being able to operate like an independent, thinking entity.
 In contrast to a program that follows specific logical rules,  the only constraints of an autonomous agent would be the mechanisms imposed on it by its architecture and environment, which is analogous to our biological constraints.
 If the agent had real intelligence, it should be able to adapt its perception, function, and logic to match its experiences of a changing environment and expand and explore its cognitive abilities \cite{franklin_is_1997}.
-As Alan Turing points out, and as we have discussed in \vref{introduction}, this would not be possible with discrete-state logic-gate systems.
+As Alan Turing points out, and as we have discussed in \vref{sect:intro}, this would not be possible with discrete-state logic-gate systems.
 However, Turing predicts that during the beginning of the current millennia, a discrete-state machine would be able to fool a human for a limited amount of time,
 which is indeed the case today \cite{turing_computing_2009}.
 The progress made in computational cognitive science is genuinely astonishing, where competence oriented agents are modeling advanced human abilities.
@@ -12,7 +12,7 @@ One such method is the artificial animal, the "animat," explored in detail by St
 \subsection{Animat}
 The basics of the animat approach are to work upwards towards higher levels of intelligence.
 Essentially, there is a focus on the whole of the system, contrary to competence oriented modeling, which focuses on specific functions.
-The requirements are an environment that modeled after the problem side and an animat modeled after the solution side.   The animat needs to have a sufficient sensor/motor system to satisfy its own needs. It is put through an increasingly challenging environment, and the goal is to the minimum increase in animat complexity necessary to satisfy its own needs in the given environment.
+The requirements are an environment that modeled after the problem side and an animat modeled after the solution side.   The animat needs to have a sufficient sensor/motor system to satisfy its own needs. The environment of the animats is supposed to be an increasingly challenging environment, and the goal is to the minimum increase in animat complexity necessary to satisfy its own needs in the given environment.
 
 Wilson claims that the animat approach might be vital in developing machine perception.
 That is, developing an agent with abilities to develop its understanding of the environment \cite{wilson_animat_1991}.
