--- a/mymaster/sections/neuromorphic2.tex
+++ b/mymaster/sections/neuromorphic2.tex
@@ -2,29 +2,29 @@
 However, as our expectations of the functionality of the computer grow increasingly similar to the functionality of biological systems, we will require devices that are not arithmetic machines but rather "thinking machines."
 It is essential to consider how computer architecture usually has been modeled after then brain since the very beginning, but always at a simplified notion compared to the current knowledge of biology and psychology.
 
-\paragraph{Consider the history} of our computer architetcure:
+\paragraph{Consider the history} of our computer architecture:
 The philosopher George Boole's maybe most excellent work was his mathematical An Investigation of the Laws of Thought, where the notion that human reasoning could be summed up by symbolic logic \cite{boole_investigation_1854}.
-This work later inspired Claude Shannon to build the first "switching circuits" that facilitated the design for combinatorial logic circuits, and led to the vacuum tube technology used in early computers.
+This work later inspired Claude Shannon to build the first "switching circuits" that facilitated the design for combinatorial logic circuits and led to the vacuum tube technology used in early computers.
 John von Neumann draws parallels to the human neurons in his report on the EDVAC, which was used by Alan Turing as a theoretical source of understanding while designing the Automatic Computing Engine \cite{von_neumann_first_1993}.
 The theoretical attempt to "capture human intelligence" and mechanical analogies to neurons led to our computer architecture.
 Combinatorial logic eventually led to the development of modern Information Theory, which was proposed by the same Shannon in his A Mathematical Theory of Communication.
 Thus, the foundational basics of our computer programs are also rooted in the search for intelligent systems.
 The most successful artificial intelligence programs were, for a long time, only compositions of logical if-then sentences \cite{haenlein_brief_2019}.
 Today most artificial intelligence programs are based on arithmetic approximation of complex functions through the use of millions of logic gates in the form of transistors.
-Over the past 70 years, our understanding of the nervous system, and of human psychology, has developed drastically, but modern computing is still rooted in the same "outdated" knowledge of the human brain.
+Over the past 70 years, our understanding of the nervous system and human psychology has developed drastically. However, modern computing is still rooted in the same "outdated" knowledge of the human brain.
 
-\paragraph{The efficiency} of our brains outperforms modern supercomputers in several aspects; like pattern recognition, grasping the "essence" of books and creative thinking.
+\paragraph{The efficiency} of our brains outperforms modern supercomputers in several aspects, like pattern recognition, grasping the "essence" of books, and creative thinking.
 In other aspects, like arithmetics and approximation, the supercomputer is far more efficient.
 Even though the human brain can perform arithmetics, it is an activity that consumes a lot more power than a modern cellphone does for the same amount of arithmetic work. However, the human brain performs other marvels, like image recognition, without spending much energy at all, to the very contrary of modern cellphones \cite{meier_special_2017}. The brain has a small, underdeveloped center for arithmetics, while the core of the computer only performs arithmetics \cite{dehaene_arithmetic_2004}.
 To successfully create machines that can efficiently perform functions similar to perception or even sensing, we ought, therefore, to explore solutions based on modern biology and psychology.
 Even many of the founders of computing, like Ada Lovelace, Neumann, and Turing, admitted that the digital computer could not achieve the same functionality as the human brain.
-A more biologically inspired machine was attempted by Rosenblatt with the Perceptron as mentioned in \vref{introduction}, and this is now the foundational algorithm for the ANNs powering state-of-the-art artificial intelligence, on modern von Neumann computers.
+A more biologically inspired machine was attempted by Rosenblatt with the Perceptron as mentioned in \vref{sect:intro}, and this is now the foundational algorithm for the ANNs powering state-of-the-art artificial intelligence, on modern von Neumann computers.
 However, modern computers are becoming increasingly power-hungry, and we are reaching the end of Moore's law \cite{mead_neuromorphic_1990} \cite{moore_cramming_1998}.
 The very same man that coined the term "Moore's Law" after his friend George Moore proposed a theoretical system that could overcome the limits of modern digital computers.
 This man was Carver Mead, who proposed Neuromorphic Electronic Systems, as devices implemented and organized after the same principles as the nervous system.
 The idea is that the nervous system performs "computational" marvels with excellent efficiency and that this is mainly due to how the nervous system utilizes the physical characteristics of its units \cite{mead_neuromorphic_1990}.
 
-\paragraph{The challenges} related to building a neuromorphic system is many;
+\paragraph{The challenges} related to building a neuromorphic system are many;
 An accurate brain model is needed to design better devices.
 To be able to build the devices, developers first need to research proper techniques and materials.
 Any utilization of the systems requires a programming framework.
@@ -39,7 +39,7 @@ An example is the Hodkin-Huxley model, which describes the electrical characteri
 Another example is the popular Izhikevich model, which is simple but reproduces many of the computational features of the neuron.
 \cite{schuman_survey_2017}
 
-\paragraph{Integrate-and-Fire (IAF) models} are varying on the complexity spectrum. Some are advanced, while others are less biologically realistic but useful.
+\paragraph{Integrate-and-Fire (IAF) models} are varying on the complexity spectrum. Some are advanced, while others are less biologically realistic, but useful.
 The model Leaky IAF is the most popular, and it comes with several additions, like Exponential Leaky IAF and Adaptive Exponential Leaky IAF. Typical SNNs usually incorporate one of these variations of IAF.
 \cite{schuman_survey_2017}
 
@@ -60,7 +60,7 @@ Typically, online training is unsupervised, while offline training is unsupervis
 \paragraph{Devices and Hardware} divides into three categories; digital, analog, and mixed analog/digital.
 The digital hardware consists of Boolean logic-gates and is usually synchronous a clock-based, but not always.
 FPGA is often used to either prototype or to give the feature of radically different network topologies, models, and algorithms.
-IBM TrueNorth is a digital system that has fully custom ASIC design, is partially asynchronous but uses a clock for necessary time steps.
+IBM TrueNorth is a digital system that has fully custom ASIC design, is partially asynchronous, but uses a clock for necessary time steps.
 It has deterministic behavior but can generate stochasticity similar to what is possible with software.
 SpiNNaker is a fully custom digital, massively parallel system.
 It uses ARM integer chips, with custom interconnect to handle spikes.
@@ -70,7 +70,7 @@ As mentioned earlier, the first neuromorphic system proposed was a wafer-scale a
 The idea was to utilize the unique characteristics of transistors to make computing more energy efficient.
 Researches have used different types of Field-Programmable Transistor Arrays (FPTA), and these are often used for analog circuit design or to model neurons, synapses, or other components of the nervous system.
 Traditionally, computing with analog circuits is complicated because of global asynchrony and noisy, unreliable components. Researchers theorize that neuromorphic design might overcome these traditional issues and use evolutionary algorithms to help design circuits that better utilize the characteristics of the analog components. \cite{langeheine_cmos_2001}.
-For digital communication and storage of information, analog neuromorphic systems often utilize some digital components. These systems can be classified as mixed analog/digital neuromorphic systems.
+For digital communication and storage of information, analog neuromorphic systems often utilize some digital components. A common term for a hybrid neuromorphic system is \textbf{mixed analog/digital neuromorphic systems}.
 An example of values to be stored digitally is synapse weight values, intrinsic information of the system, or time series of activity. The systems which use some digital components are also easier to program, which is essential for development.
 A mixed analog/digital system is Neurogrid, an analog chip that has an architecture very close to Mead's definition \cite{mead_neuromorphic_1990}.
 It works in subthreshold mode.
@@ -79,7 +79,7 @@ A third mixed analog/digital system is BrainScaleS, which is the system of focus
 It has a wafer-scale analog architecture, which was also proposed by Mead \cite{mead_neuromorphic_1990} and works in a supertreshold mode because of the high rate of operation.
 \cite{schuman_survey_2017}
 
-\subsection{Evolutionary Hardware}\label{sect:eh}
+\subsection{Evolvable Hardware}\label{sect:eh}
 \subfile{sections/eh}
 
 \subsection{BrainScaleS}\label{sect:bss}
